# casqadium

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  icon.rc  main.cpp
example/data/: packages.json
example/data/cqde-templates/: input.json  meshes.json  prefabs.json
example/data/cqde-templates/meshes/: cube.gltf  sphere16.gltf  sphere32.gltf  sphere8.gltf
example/data/cqde-templates/quads/: quad.json
example/data/demo/: audio.json  entities.json  manifest.json  prefabs.json  textures.json
example/data/demo-audio/: audio.json  entities.json  input.json  manifest.json  meshes.json  prefabs.json  textures.json
example/data/demo-audio/meshes/: car_back.json  cliff.gltf  jersey.gltf  road.json  road_barrier.json  saloon_ceiling.json  saloon_floor.json  skybox.gltf  tunnel.gltf
example/include/demo/: callbacks.hpp  components.hpp  systems.hpp
example/src/: callbacks.cpp  components.cpp  systems.cpp
lib/AppFramework/: CMakeLists.txt
lib/AppFramework/include/AppFramework/: ApplicationCore.hpp  RenderCommand.hpp  RenderQueue.hpp  TickTimestamp.hpp
lib/AppFramework/src/: ApplicationCore.cpp  RenderCommand.cpp  RenderQueue.cpp  TickTimestamp.cpp
lib/ECS/: CMakeLists.txt
lib/ECS/include/ECS/: Alias.hpp  Common.hpp  PackageLoader.hpp
lib/ECS/include/ECS/Components/: Camera.hpp  GeometryBuffer.hpp  InputController.hpp  SceneNode.hpp  SequenceManager.hpp  Tag.hpp  TextureBuffer.hpp  TextureStorage.hpp  Transform.hpp  VertexBuffer.hpp
lib/ECS/include/ECS/Systems/: CullingSystem.hpp  RenderSystem.hpp
lib/ECS/include/ECS/Types/: CallbackStorage.hpp  EntityReference.hpp  InputAxis.hpp  SequenceStep.hpp  TextureStorage.hpp  VertexBuffer.hpp
lib/ECS/src/: Common.cpp  PackageLoader.cpp
lib/ECS/src/Components/: Camera.cpp  GeometryBuffer.cpp  InputController.cpp  SceneNode.cpp  SequenceManager.cpp  Tag.cpp  TextureBuffer.cpp  TextureStorage.cpp  Transform.cpp  VertexBuffer.cpp
lib/ECS/src/Systems/: CullingSystem.cpp  RenderSystem.cpp
lib/ECS/src/Types/: CallbackStorage.cpp  EntityReference.cpp  InputAxis.cpp  TextureStorage.cpp  VertexBuffer.cpp
lib/Graphics3D/: CMakeLists.txt
lib/Graphics3D/include/Graphics3D/: Camera.hpp  Drawable.hpp  OrientationGizmo.hpp  Quad.hpp  SceneNode.hpp  Transformable.hpp
lib/Graphics3D/src/: Camera.cpp  OrientationGizmo.cpp  Quad.cpp  SceneNode.cpp  Transformable.cpp
lib/ImGuizmo/: CMakeLists.txt  ImGuizmo.cpp
lib/Sdl2Wrapper/: CMakeLists.txt
lib/Sdl2Wrapper/include/Sdl2Wrapper/: Animation.hpp  Math.hpp  Renderer.hpp  SDL2.hpp  Sound.hpp  Texture.hpp  Window.hpp
lib/Sdl2Wrapper/src/: Animation.cpp  Math.cpp  Renderer.cpp  SDL2.cpp  Sound.cpp  Texture.cpp  Window.cpp
lib/TimeUtils/: CMakeLists.txt
lib/TimeUtils/include/TimeUtils/: Duration.hpp  Timer.hpp
lib/TimeUtils/src/: Duration.cpp  Timer.cpp
lib/TimeUtils/test/: TimeUtilsTest.cpp
lib/casqadium/: CMakeLists.txt
lib/casqadium/include/cqde/: JsonPackageStructure.hpp  PackageLoader.hpp  alias.hpp  callbacks.hpp  common.hpp  ecs_helpers.hpp  file_helpers.hpp  fwd.hpp  identifier.hpp  json_helpers.hpp  math_helpers.hpp  render_helpers.hpp  rp3d_fwd.hpp  string_helpers.hpp  systems.hpp
lib/casqadium/include/cqde/callbacks/: common_routine.hpp  editor_common.hpp  editor_input.hpp  entities.hpp  input.hpp  physics.hpp  snapshots.hpp
lib/casqadium/src/: PackageLoader.cpp  audio_helpers.cpp  callbacks.cpp  common.cpp  ecs_helpers.cpp  file_helpers.cpp  identifier.cpp  json_helpers.cpp  math_helpers.cpp  render_helpers.cpp  systems.cpp
lib/casqadium/src/callbacks/: assets.cpp  assets_routine.cpp  audio.cpp  common_routine.cpp  editor.cpp  editor_camera_input.cpp  editor_common.cpp  editor_gizmo_input.cpp  editor_input.cpp  entities.cpp  input.cpp  physics.cpp  snapshots.cpp
lib/casqadium/src/components/: Camera.cpp  Camera_ui.cpp  Camera_ui_impl.cpp  CasqadiumEditorCameraSettings.cpp  CasqadiumEditorInternal.cpp  CasqadiumEntryPoint.cpp  CasqadiumEntryPoint_ui_impl.cpp  EntityList.cpp  EntityList_ui.cpp  EntityList_ui_impl.cpp  EntityMetaInfo.cpp  EntityMetaInfo_ui.cpp  EntityMetaInfo_ui_impl.cpp  GeometryBuffer.cpp  GeometryBuffer_ui.cpp  GeometryBuffer_ui_impl.cpp  InputController.cpp  InputController_ui.cpp  InputController_ui_impl.cpp  InteractionListener.cpp  InteractionListener_ui.cpp  InteractionProbe.cpp  InteractionProbe_ui.cpp  InteractionSource.cpp  InteractionSourceActiveAction_ui.cpp  InteractionSource_ui.cpp  LightSource_ui.cpp  LightSource_ui_impl.cpp  SceneNode.cpp  SceneNode_ui.cpp  SceneNode_ui_impl.cpp  SequenceController.cpp  SequenceController_ui.cpp  SequenceController_ui_impl.cpp  SequenceManager.cpp  SequenceManager_ui_impl.cpp  SnapshotExcluded.cpp  SnapshotExcluded_ui_impl.cpp  SubscriberInput.cpp  SubscriberInput_ui_impl.cpp  (+16 more)
lib/casqadium/src/conversion/: SoLoudBackendStringConverter.cpp  json_glm_vec.cpp  rp3d_glm.cpp  soloud_string.cpp
lib/casqadium/src/systems/: CullingSystem.cpp  RenderSystem.cpp  audio.cpp  input.cpp  interaction.cpp  logic.cpp  physics.cpp  render.cpp
lib/casqadium/src/types/: CallbackManager.cpp  CallbackStorage.cpp  ConfigManager.cpp  EntityManager.cpp  EntityReference.cpp  EntityTagManager.cpp  EntityTagStorage.cpp  InputAxis.cpp  InputCallbackStorage.cpp  Package.cpp  PackageManager.cpp  Package_ui_impl.cpp  PhysicsManager.cpp  PrefabManager.cpp  ResourceManager.cpp  SnapshotManager.cpp  SplineCurve.cpp  SystemManager.cpp  TimeProgress.cpp  TimeProgress_ui.cpp  UserManager.cpp  VertexBuffer.cpp
lib/casqadium/src/util/: ConfigManager.cpp  editor_imgui_settings.cpp  logger.cpp  logger_rp3d.cpp
lib/imgui/: CMakeLists.txt
lib/imgui/misc/curve/: imgui_bezier.cpp
lib/olcPGE/: CMakeLists.txt  LICENCE.md
lib/olcPGE/include/olcPGE/: Math.hpp  olcEvent.hpp  olcEventHandler.hpp  olcMouseInputId.hpp  olcPGEX_CustomFont.hpp  olcPGEX_ImGui.hpp  olcPGEX_TTF.hpp  olcPixelGameEngine.hpp
lib/olcPGE/src/: Math.cpp  olcEventHandler.cpp  olcPGEX_CustomFont.cpp  olcPGEX_ImGui.cpp  olcPGEX_TTF.cpp  olcPixelGameEngine.cpp
lib/olcPGE/src/fonts/: ProggyClean.cpp  RobotoMedium.cpp
(+660 files in other folders)
